most recent changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Satellite Orbit Simulator – Step 2</title>
+    <title>Satellite Orbit Simulator</title>
     <style>
         body {
             margin: 0;
@@ -19,8 +19,8 @@
 </head>
 
 <body>
-    <canvas id="glCanvas" width="800" height="600"></canvas>
-    <!-- Libraries (adjust paths if using local copies) -->
+    <canvas id="glCanvas" width="1920" height="1080"></canvas>
+
     <script src="lib/webgl-utils.js"></script>
     <script src="lib/webgl-debug.js"></script>
     <script src="lib/cuon-utils.js"></script>
@@ -31,9 +31,12 @@
     <script src="Planet.js"></script>
     <script src="Satellite.js"></script>
     <script src="Starfield.js"></script>
+    <script src="LensFlare.js"></script>
     <script src="main.js"></script>
     <script src="Thruster.js"></script>
     <script src="Sun.js"></script>
+
+    <script src="Comet.js"></script>
 </body>
 
 </html>
